--- a/server/Makefile
+++ b/server/Makefile
@@ -1,3 +1,3 @@
 game_server: *.h *.cpp Makefile
-	g++ -g -Wall -Wextra -pedantic *.cpp -std=c++0x -pthread -o game_server -O2
+	g++ -g -Wall -Wno-write-strings *.cpp -std=gnu++0x -pthread -o game_server -O0
 #	g++ -g -Wall -Wextra -Werror -pedantic *.cpp -std=c++0x -pthread -o game_server -O2
